2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: If indent engine says line needs to be
	  reindented, check it's as a result of an inserted character rather than
	  just navigating around the code.

2007-10-25  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't insert a tab if it's interpreted
	  as a reindent command.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Make compilation work when the key file
	  contains white spaces. Fixes bug #336107.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, icons/C#.File.EmptyFile, icons/C#.File.Form,
	  icons/C#.File.FullFile, icons/C#.File.NewClass, icons/C#.File.WebFile,
	  icons/C#.Project.FullProject, icons/C#.Project.ServiceProject,
	  icons/C#.Project.UserControl, icons/C#.Project.WebProject,
	  icons/C#.ProjectIcon, Makefile.am, templates/EmptyCSharpFile.xft.xml,
	  templates/GnomeSharpProgram.xft.xml: Use tango file icons. Removed
	  obsolete icons.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, templates/ConsoleProject.xpt.xml,
	  templates/GtkSharpProject.xpt.xml, templates/GnomeSharpProject.xpt.xml,
	  templates/GnomeSharp2Project.xpt.xml,
	  templates/GtkSharp2Project.xpt.xml, templates/GnomeSharpProgram.xft.xml,
	  templates/GladeSharpProject.xpt.xml,
	  templates/GladeSharp2Project.xpt.xml, templates/Library.xpt.xml,
	  templates/EmptyProject.xpt.xml, Makefile.am, icons/C#.Project.Form,
	  icons/C#.Project.Library, icons/C#.Project.DOSProject,
	  icons/csharp-icon-32.png, icons/C#.Project.EmptyProject: Updated project
	  icons. Use the base project icon with an overlay to show the type.

2007-10-24  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Refactored the keypress code to separate
	  out the indent engine and doc comments, also splitting up the indent